# auto-rust

./: Cargo.toml
src/: add_compose.rs  add_functions.rs  add_minio.rs  boilerplate.rs  create_output_structs.rs  gen_docker.rs  gen_sql.rs  gen_toml.rs  llm.txt  main.rs  temp-postgres.yaml  test_env.rs
src/gen_structs_with_sql/: docker-compose
test4/: Cargo.toml
test_project2/: Cargo.toml
