[package]
name = "auto-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
bigdecimal = "0.4.8"
convert_case = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }

sf = "0.1.1"
sqlx = "0.8.5"
# ollama-rs = { version = "0.3.1", features = ["stream", "macros"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
schemars = { version = "0.8", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"] }
tempfile = "3.10.1"
dotenv = "0.15"

crud_macros = { path = "./crud_macros" }
fs_extra = "1.3.0"
serde_urlencoded = "0.7.1"
# dotenv = "0.15.0"

[build-dependencies]
